# Translation-Methods

./: README.md
language_translator/: README.md  pom.xml
language_translator/src/main/antlr4/: SimpleOCaml.g4
language_translator/src/main/java/: Main.java  Translator.java
language_translator/src/main/resources/: example  example.txt
language_translator_with_attributes/src/main/antlr4/: NaiveFunc.g4
language_translator_with_attributes/src/main/java/: Main.java
language_translator_with_attributes/src/main/resources/: example
syntax_analyser/: CMakeLists.txt  Makefile  README.md  graph_visualizator.cpp  graph_visualizator.h  main.cpp
syntax_analyser/cmake-build/: input.txt
syntax_analyser/pascal_array_declaration/: CMakeLists.txt  lex_analyser.cpp  lex_analyser.h  parser.cpp  parser.h  token.h
